samples/_failures_safe/1761044646_6f99c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86ebd656.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_86ebd656.c:145:9: error: expected declaration or statement at end of input
  145 |         for (int j = 0; j < src->cols; j++) {
      |         ^~~
./samples/SAFE/__tmp_86ebd656.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86ebd656.c:145:9: error: expected declaration or statement at end of input
